--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,15 @@
 .app-container {
     display: flex;
 }
+
+.content {
+    height: calc(100% - 4rem);
+}
+
+.bg-image {
+    background-image: url("../assets/img/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-clip: border-box;
+    backdrop-filter: blur(.8);
+}
