--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,21 @@
 <div class="container h-100">
   <div class="row h-100 align-items-center">
     <div class="col-12 col-md-6 mx-auto align-self-center">
-      <form class="card h-100 border-success justify-content-center">
+      <form class="card h-100 justify-content-center">
         <div class="card-body">
-          <div class="card-title">
+          <div class="card-title text-center">
             <h4>Please login</h4>
           </div>
-          <input type="text" #username name="username" class="form-control mb-1" placeholder="Username">
-          <input type="password" #password name="password" class="form-control mb-1" placeholder="Password">
-          <button type="submit" class="btn btn-success" (click)="login(username.value, password.value)">Login</button>
+          <div class="form-group">
+            <input type="text" #username name="username" class="form-control rounded-pill" placeholder="Username">
+          </div>
+          <div class="form-group">
+            <input type="password" #password name="password" class="form-control rounded-pill" placeholder="Password">
+          </div>
+          <div class="w-100 d-flex justify-content-between">
+            <button type="button" class="btn btn-primary rounded-pill"  routerLink="/register">Register</button>
+            <button type="button" class="btn btn-success rounded-pill" (click)="login(username.value, password.value)">Login <i class="fa fa-arrow-right"></i></button>
+          </div>
           <ngb-alert *ngIf="alert.message !== ''" [dismissible]="false" [type]="alert.type">{{alert.message}}</ngb-alert>
         </div>
       </form>
