--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,30 +1,9 @@
 <div class="menu-container h-100">
-    <div class="logo-container">
-        <i class="fa fa-compass logo"></i>
-    </div>
     <ul *ngIf="isLoggedIn" class="nav flex-column">
-        <li class="nav-item">
-            <button class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <i class="fa fa-calendar"></i>
-                <span class="menu-item-text">Schedule</span>
-            </button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" routerLink="/tests" routerLinkActive="active">
-                <i class="fa fa-list"></i>
-                <span class="menu-item-text">Tests</span>
-            </button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" routerLink="/settings" routerLinkActive="active">
-                <i class="fa fa-cog"></i>
-                <span class="menu-item-text">Setup</span>
-            </button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" (click)="openVerticallyCentered(modal)">
-                <i class="fa fa-home"></i>
-                <span class="menu-item-text">Change Competition</span>
+        <li class="nav-item" *ngFor="let item of menuItems">
+            <button class="nav-link" routerLink="{{item.link}}" routerLinkActive="active" [routerLinkActiveOptions]="item.options">
+                <i class="fa fa-{{item.icon}}"></i>
+                <span class="menu-item-text">{{item.name}}</span>
             </button>
         </li>
         <li class="nav-item">
@@ -35,7 +14,3 @@
         </li>
     </ul>
 </div>
-
-<ng-template #modal let-modalClose="close" let-modalDismiss="dismiss">
-    <app-competition-changer *ngIf="currentUser" [competitions]="currentUser.competitions" [activeCompetitionUri]="activeCompetitionUri" (close)="modalDismiss($event)" (create)="competitionCreated($event)"></app-competition-changer>
-</ng-template>
