--- a/src/app/competition-changer/competition-changer.component.css
+++ b/src/app/competition-changer/competition-changer.component.css
@@ -9,7 +9,11 @@
     border-color: #292930;
 }
 
-.list-group {
+/* .list-group {
     max-height: 80vh;
     overflow-y: scroll;
+} */
+
+.display-4 {
+    font-size: 2.5rem;
 }
